# AutoPasSimulator

./: CMakeLists.txt  README.md
cmake/modules/: autopas.cmake
src/: main.cpp
src/templateInstantiations/: AutoPasClass.cpp  computeInteractionsFunctorKokkos.cpp
utils/: Configuration.h  FunctorKokkos.h  KokkosParticle.h  ParticleType.h  Setup.h
